Updated account to list an amount of data that justifies the existence of the page and furthered understanding of what an account may need to ensure proper functionality, updated colouring to help lightMode alt items stand out and improve readability, Cannot use SQL with aws free so will need to figure out new method with noSql

--- a/src/GlobalComponents/Theme.css
+++ b/src/GlobalComponents/Theme.css
@@ -3,12 +3,12 @@
     color: white;
 }
 .Light{
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     color: black;
 }
 .altLight {
-    background-color: whitesmoke;
-    color: black;
+    background-color: rgb(220, 220, 220);
+    color: wh;
 }
 .altDark {
     background-color: #181717;
