--- a/src/Pages/Contact-and-Communication/Contact.css
+++ b/src/Pages/Contact-and-Communication/Contact.css
@@ -25,6 +25,7 @@
     }
     .ContactPageTitle{
         background-color: red;
+        color: white;
         width: 100%;
         text-align: center;
         padding-top: 10px;
@@ -48,7 +49,7 @@
         width: 100%;
     }
     .WorkDisplayItem{
-        width: 80%;
+        width: 100%;
         margin: auto;
     }
     .WorkDisplayItemTitle{
@@ -61,6 +62,7 @@
     .ContactInformation {
         padding: 5px;
         background-color: red;
+        color: white;
         font-size: small;
     } 
 }
@@ -75,6 +77,7 @@
     }
     .ContactPageTitle{
         background-color: red;
+        color: white;
         width: 100%;
         text-align: center;
         padding-top: 10px;
@@ -84,6 +87,7 @@
     .ServicesSectionTitle{}
     .ServicesContainer{}
     .Service{
+        border: 1px solid;
         list-style: none;
     }
     .ServiceName{}
@@ -106,8 +110,15 @@
     .WorkDisplayItemPicture{
         width: 100%;
     }
+    .ContactInformationContainer {
+        padding: 10px;
+    }
     .ContactInformation {
-        padding: 5px;
         background-color: red;
+        color: white;
+        padding: 5px;
+        border-bottom: 1px solid;
+        width: 50%;
+        text-align: end;
     }
 }
