--- a/src/Pages/Energy-use-and-management/EnergyStatistics.css
+++ b/src/Pages/Energy-use-and-management/EnergyStatistics.css
@@ -295,5 +295,6 @@
     .GraphContainer{
         width: 100%;
         height: 100%;
+        color: black;
     }
 }
